Initial support for mobile devices Fixed visibility of unread counts for subscriptions that are longer than available space Fixed DOCTYPE

--- a/content/reader.css
+++ b/content/reader.css
@@ -26,6 +26,7 @@ body {
 	font-size: 10pt;
 	color: #444;
 	margin: 0;
+	background-color: #fff;
 }
 
 #header {
@@ -103,6 +104,7 @@ a {
 	top: 0;
 	bottom: 0;
 	overflow: auto;
+	background-color: #fff;
 }
 
 .floated-nav #reader .feeds-container {
@@ -375,11 +377,11 @@ ul#subscriptions,
 }
 
 .subscription-item {
-	overflow: hidden;
 	white-space: nowrap;
+	overflow: hidden;
 	text-overflow: ellipsis;
 	cursor: pointer;
-	padding: 0.35em 0;
+	padding: 0.35em 1em 0.35em 0;
 	margin-right: 1em;
 	border: solid 1px transparent;
 }
@@ -427,7 +429,13 @@ ul#subscriptions,
 	border: solid 1px #000;
 }
 
-.subscription-title {
+.too-long {
+	padding-right: 3.5em;
+}
+
+.too-long .subscription-unread-count {
+	position: absolute;
+	right: 2em;
 }
 
 .subscription-unread-count {
@@ -769,4 +777,49 @@ ul.menu {
 	background-color: #fffacd;
 	font-size: 9pt;
 	font-weight: normal;
+}
+
+/*** Desktop ****/
+.settings-filter {
+	display: none;
+}
+
+.mark-all-as-read.unavailable {
+	display: none;
+}
+
+/*** Mobile ***/
+@media only screen and (max-width: 560px) {
+	.settings-filter {
+		display: list-item;
+	}
+
+	.settings-shortcuts {
+		display: none;
+	}
+
+	.filter.dropdown {
+		display: none;
+	}
+
+	.mark-all-as-read {
+		display: none;
+	}
+
+	.menu-show-sidebar,
+	.menu-show-all-subs {
+		display: none;
+	}
+
+	#reader .feeds-container {
+		display: none;
+	}
+
+	.gofr-entries-container {
+		left: 0;
+	}
+
+	.navigate {
+		display: inline-block;
+	}
 }
